update with query syntax documents and examples